Diseño responsivo+Authors

--- a/views/authors.ejs
+++ b/views/authors.ejs
@@ -4,5 +4,10 @@
       <img src="http://mrk992.neocities.org/me.JPG" alt="" class="circle">
       <span class="title">Marcos Rojas Martin</span>
       <p><a href="https://youtu.be/Aw2PjuQ313g">Video</a><br>  
-      </p>      
+      </p>
+    <li class="collection-item avatar">
+      <img src="http://carlosdelucas92.neocities.org/CORE/src/yo.png" alt="" class="circle">
+      <span class="title">Carlos de Lucas</span>
+      <p><a href="https://www.youtube.com/watch?v=41ap3qdUBlM">Video</a><br>  
+      </p>       
   </ul>
