--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -39,7 +39,7 @@
           </div>
           <div class="col l4 offset-l2 s12">            
             <ul>
-              <li><a class="grey-text text-lighten-3" href="/home">Home</a></li>
+              <li><a class="grey-text text-lighten-3" href="/">Home</a></li>
               <li><a class="grey-text text-lighten-3" href="/authors">Autores</a></li>              
             </ul>
           </div>
@@ -55,8 +55,7 @@
   </body>
 
 
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"></script>
+  
   <!-- Compiled and minified JavaScript -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"></script>
    <script type="text/javascript">
