--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,7 +19,7 @@
   <body>
   <nav>
     <div class="nav-wrapper teal grey darken-4">
-      <a href="#" class="brand-logo">QUIZ</a>
+      <a href="/" class="brand-logo">QUIZ</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/authors">Autores</a></li>        
       </ul>
