--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,7 +21,8 @@
     <div class="nav-wrapper teal grey darken-4">
       <a href="/" class="brand-logo">QUIZ</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/authors">Autores</a></li>        
+        <li><a href="/authors">Autores</a></li>
+        <li><a href="/quizes">Preguntas</a></li>        
       </ul>
     </div>
   </nav>
