--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,8 +27,10 @@
     </div>
   </nav>
     <main>
-      <div class="main">
-        <%- body %>
+      <div class="container">
+        <div class="main">
+          <%- body %>
+        </div>
       </div>
     </main>
 
