--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,3 +1,10 @@
+<form method="get" action="/quizes">
+	
+	<input type="text" name="search" value="Busca una pregunta"/>
+
+	<input type="submit" value="Enviar"/>
+	
+</form>
   <table>
   <% var i; for (i=0; i < quizes.length; i++) { %>        
      <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr> 
