--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,6 +1,6 @@
 <form method="get" action="/quizes">
 	
-	<input type="text" name="search" value="Busca una pregunta"/>
+	<input placeholder="Busca una pregunta" type="text" name="search" />
 
 	<input type="submit" value="Enviar"/>
 	
