--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Preguntas</title>   
-     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' 
-          type='text/css'
-          media='only screen and (min-width: 530px) and (min-device-width: 481px)'
-          href='/stylesheets/wide.css' />
-    <link rel='stylesheet'
-          type='text/css'
-          media='only screen and (max-width: 480px)' 
-          href='/stylesheets/smartphone.css' />
+        <meta charset='utf8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
+    <title>Quiz. El juego de preguntas</title>
+
+    <link type="text/css" rel="stylesheet" href="/stylesheets/materialize.css"  media="screen,projection"/>
+    <link type="text/css" rel='stylesheet' href='/stylesheets/style.css' />
+    <link type="text/css" rel='stylesheet' href='/stylesheets/wide.css' media='only screen and (min-width: 530px) and (min-device-width: 481px)'/>
+    <link rel='stylesheet' href='/stylesheets/smartphone.css' media='only screen and (max-width: 480px)'/>
+
+    <script type="text/javascript" src="/javascripts/materialize.js"></script>
   </head>
   <body>
   <nav>
@@ -56,13 +53,5 @@
             
 
   </body>
-
-
-  
-  <!-- Compiled and minified JavaScript -->
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"></script>
-   <script type="text/javascript">
-
-    
-   </script>          
+     
 </html>
