Add question creator

--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,4 +1,6 @@
   <p>
-    <%= respuesta %>
+    <%= respuesta %> <i class="mdi-action-thumb-up"></i>
     <a href="/quizes/<%= quiz.id %>">Volver</a>
   </p>
+
+  
