--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,5 +1,6 @@
 <form method="get" action="/quizes/<%= quiz.id %>/answer">        
   Pregunta: <%= quiz.pregunta %> <p>
    <input placeholder="Respuesta" type="text" name="respuesta" />
-   <input type="submit" value="Enviar">
+	</button><button class="waves-effect waves-teal btn-flat" type="sumit">Enviar<i class="mdi-content-send right"></i>
+	</button>
  </form>
