Add backfunction & reply buttons

--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,6 +1,12 @@
   <p>
-    <%= respuesta %> <i class="mdi-action-thumb-up"></i>
-    <a href="/quizes/<%= quiz.id %>">Volver</a>
-  </p>
+    <%= respuesta %> 
+    <p>
+    <a href="/quizes/<%= quiz.id %>">
+    <button class="waves-effect waves-teal btn-flat" type="button">Reintentar<i class="mdi-content-reply right"></i>
+  	</button></a>
+	<a href="/quizes">
+	<button class="waves-effect waves-teal btn-flat" type="button">Volver<i class="mdi-content-undo right"></i>
+  	</button></a>    
+  </p></p>
 
   
