--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -13,5 +13,5 @@
   </table>
 
 <a href="/quizes/new">
-  <button class="waves-effect waves-teal btn-flat" type="button">Crear pregunta<i class="mdi-content-create right"></i></a>
-</button>
+  <button class="waves-effect waves-teal btn-flat" type="button">Crear pregunta<i class="mdi-content-create right"></i>
+  </button></a>
