--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -3,4 +3,7 @@
    <input placeholder="Respuesta" type="text" name="respuesta" />
 	</button><button class="waves-effect waves-teal btn-flat" type="sumit">Enviar<i class="mdi-content-send right"></i>
 	</button>
+	<a href="/quizes">
+	<button class="waves-effect waves-teal btn-flat" type="button">Volver<i class="mdi-content-undo right"></i>
+  	</button></a>
  </form>
