--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,5 +1,5 @@
 <label for="preg" class="rem">Pregunta:</label>
-<input placeholder="Respuesta" type="text" id="preg" name="quiz[pregunta]" /> <p>
+<input placeholder="Pregunta" type="text" id="preg" name="quiz[pregunta]" /> <p>
 <label for="resp" class="rem">Respuesta:</label>
 <input placeholder="Respuesta" type="text" id="resp" name="quiz[respuesta]" /> <p>
 <a href="/quizes"></button><button class="waves-effect waves-teal btn-flat" type="button">Cancelar
