--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,7 +1,7 @@
 <label for="preg" class="rem">Pregunta:</label>
-<input placeholder="Pregunta" type="text" id="preg" name="quiz[pregunta]" /> <p>
+<input placeholder="Pregunta" type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>" /> <p>
 <label for="resp" class="rem">Respuesta:</label>
-<input placeholder="Respuesta" type="text" id="resp" name="quiz[respuesta]" /> <p>
+<input placeholder="Respuesta" type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>" /> <p>
 <a href="/quizes"></button><button class="waves-effect waves-teal btn-flat" type="button">Cancelar
 <i class="mdi-navigation-cancel right"></i></button></a>
 </button><button class="waves-effect waves-teal btn-flat" type="sumit">Salvar<i class="mdi-content-save right"></i>
