--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -7,3 +7,10 @@
 	<button class="waves-effect waves-teal btn-flat" type="button">Volver<i class="mdi-content-undo right"></i>
   	</button></a>
  </form>
+
+<p><a href="/quizes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a></p>
+
+<p><strong>Comentarios:</strong></p>
+<%for(index in quiz.Comments){%>
+	<p>- <%=quiz.Comments[index].texto%></p>
+<%}%>
