--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -8,7 +8,8 @@
   	</button></a>
  </form>
 
-<p><a href="/quizes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a></p>
+<p><a href="/quizes/<%= quiz.id %>/comments/new">
+<button class="waves-effect waves-teal btn-flat" type="button">Nuevo comentario</button></a></p>
 
 <p><strong>Comentarios:</strong></p>
 <%for(index in quiz.Comments){%>
