--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,6 +18,13 @@
     <div class="nav-wrapper teal grey darken-4">
       <a href="/" class="brand-logo">QUIZ</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li>
+          <%if(!session.user){%>
+            <span class="right"><a href="/login">Login</a></span>
+          <%}else{%>
+            <span class="right"> <%=session.user.username%> <a href="/logout">Logout</a></span>
+          <%}%> 
+        </li>       
         <li><a href="/authors">Autores</a></li>
         <li><a href="/quizes">Preguntas</a></li>        
       </ul>
