--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -6,22 +6,29 @@
 	</button>
 	
 </form>
-  <table>
-    <% var i; for (i=0; i < quizes.length; i++) { %>        
-    <tr>
-      <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
-      <td><a href="quizes/<%= quizes[i].id %>/edit"><button >editar</button></a></td>
+
+<table>
+  <% var i; for (i=0; i < quizes.length; i++) { %>        
+  <tr>
+    <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+    <%if(session.user){%>
+      <td><a href="quizes/<%= quizes[i].id %>/edit"><button class="waves-effect waves-teal btn-flat" type="button">
+        editar<i class="mdi-editor-border-color right"></i></button></a></td>
       <td>
-       <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
-          <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
-            borrar
+        <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+          <button class="waves-effect waves-teal btn-flat" type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+            borrar<i class="mdi-navigation-cancel right"></i>
           </button>
         </form>
       </td>
-    </tr> 
+    <%}%>
+  </tr> 
   <% } %>
-  </table>
+</table>
 
-<a href="/quizes/new">
-  <button class="waves-effect waves-teal btn-flat" type="button">Crear pregunta<i class="mdi-content-create right"></i>
-  </button></a>
+<%if(session.user){%>
+  <a href="/quizes/new">
+    <button class="waves-effect waves-teal btn-flat" type="button">Crear pregunta<i class="mdi-content-create right"></i>
+    </button></a>
+<%}%>
+
