--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -40,6 +40,7 @@
           </li>       
           <li><a href="/authors">Autores</a></li>
           <li><a href="/quizes">Preguntas</a></li>
+          <li><a href='/quizes/statistics'>Estadisticas</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
           <li>
@@ -51,6 +52,7 @@
           </li>       
           <li><a href="/authors">Autores<i class="mdi-social-people right"></i></a></li>
           <li><a href="/quizes">Preguntas<i class="mdi-action-question-answer right"></i></a></li>
+          <li><a href='/quizes/statistics'>Estadisticas<i class="mdi-editor-format-list-bulleted right"></i></a></li> 
         </ul>
       </div>
     </nav>  
