--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -2,6 +2,8 @@
 <input placeholder="Pregunta" type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>" /> <p>
 <label for="resp" class="rem">Respuesta:</label>
 <input placeholder="Respuesta" type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>" /> <p>
+<p><label for="image" class="rem">Imagen:</label>
+<input type="file" accept="image/*" id="image" name="image"/></p>
 <a href="/quizes"></button><button class="waves-effect waves-teal btn-flat" type="button">Cancelar
 <i class="mdi-navigation-cancel right"></i></button></a>
 </button><button class="waves-effect waves-teal btn-flat" type="sumit">Salvar<i class="mdi-content-save right"></i>
