--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -11,7 +11,8 @@
   <% var i; for (i=0; i < quizes.length; i++) { %>        
   <tr>
     <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
-    <%if(session.user){%>
+    <%if(session.user){
+      if (session.user.isAdmin || session.user.id === quizes[i].UserId) {%>
       <td><a href="quizes/<%= quizes[i].id %>/edit"><button class="waves-effect waves-teal btn-flat" type="button">
         editar<i class="mdi-editor-border-color right"></i></button></a></td>
       <td>
@@ -21,7 +22,8 @@
           </button>
         </form>
       </td>
-    <%}%>
+      <%}
+    }%>
   </tr> 
   <% } %>
 </table>
