--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -44,7 +44,12 @@
             <%}else{%>
               <a href="/logout"><%=session.user.username%> <i class="mdi-action-exit-to-app right"></i></a>             
             <%}%> 
-          </li> 
+          </li>
+          <li>
+            <%if(session.user){%>
+              <a href="/user/<%=session.user.id%>/quizes">Mis Preguntas</a>
+            <%}%>
+          </li>               
           <li><a href="/authors">Autores</a></li>
           <li><a href="/quizes">Preguntas</a></li>
           <li><a href='/quizes/statistics'>Estadisticas</a></li>
@@ -63,7 +68,12 @@
             <%}else{%>
                <a href="/logout"> <%=session.user.username%> <i class="mdi-action-exit-to-app right"></i></a>
             <%}%> 
-          </li>       
+          </li>
+          <li>
+            <%if(session.user){%>
+              <a href="/user/<%=session.user.id%>/quizes">Mis Preguntas</a>
+            <%}%>
+          </li>                 
           <li><a href="/authors">Autores<i class="mdi-social-people right"></i></a></li>
           <li><a href="/quizes">Preguntas<i class="mdi-action-question-answer right"></i></a></li>
           <li><a href='/quizes/statistics'>Estadisticas<i class="mdi-editor-format-list-bulleted right"></i></a></li> 
