--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -10,13 +10,13 @@
 <table>
   <% var i; for (i=0; i < quizes.length; i++) { %>        
   <tr>
-    <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+    <td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
     <%if(session.user){
       if (session.user.isAdmin || session.user.id === quizes[i].UserId) {%>
-      <td><a href="quizes/<%= quizes[i].id %>/edit"><button class="waves-effect waves-teal btn-flat" type="button">
+      <td><a href="/quizes/<%= quizes[i].id %>/edit"><button class="waves-effect waves-teal btn-flat" type="button">
         editar<i class="mdi-editor-border-color right"></i></button></a></td>
       <td>
-        <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+        <form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
           <button class="waves-effect waves-teal btn-flat" type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
             borrar<i class="mdi-navigation-cancel right"></i>
           </button>
