--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,7 +49,12 @@
             <%if(session.user){%>
               <a href="/user/<%=session.user.id%>/quizes">Mis Preguntas</a>
             <%}%>
-          </li>               
+          </li>
+          <li>
+            <%if(session.user){%>
+              <a href="/user/<%=session.user.id%>/favourites">Favoritos</a>
+            <%}%>
+          </li>
           <li><a href="/authors">Autores</a></li>
           <li><a href="/quizes">Preguntas</a></li>
           <li><a href='/quizes/statistics'>Estadisticas</a></li>
@@ -71,9 +76,14 @@
           </li>
           <li>
             <%if(session.user){%>
-              <a href="/user/<%=session.user.id%>/quizes">Mis Preguntas</a>
+              <a href="/user/<%=session.user.id%>/quizes">Mis Preguntas<i class="mdi-editor-format-indent-increase right"></i></a>
             <%}%>
-          </li>                 
+          </li>
+          <li>
+            <%if(session.user){%>
+              <a href="/user/<%=session.user.id%>/favourites">Favoritos<i class="mdi-action-stars right"></i></a>
+            <%}%>
+          </li>                           
           <li><a href="/authors">Autores<i class="mdi-social-people right"></i></a></li>
           <li><a href="/quizes">Preguntas<i class="mdi-action-question-answer right"></i></a></li>
           <li><a href='/quizes/statistics'>Estadisticas<i class="mdi-editor-format-list-bulleted right"></i></a></li> 
